# CMake-Examples

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
src/ClangTidy/: CMakeLists.txt  README.md  complex.cpp  complex.h  vector.h
src/ExecutableAndLibraries/: CMakeLists.txt  README.md  complex.cpp  main.cpp  vector.cpp  vector.h
src/ExportingAndUsingPackages/: README.md
src/ExportingAndUsingPackages/ExportingPackages/complex/: CMakeLists.txt
src/ExportingAndUsingPackages/ExportingPackages/complex/src/: complex.cpp
src/ExportingAndUsingPackages/ExportingPackages/vector/: CMakeLists.txt
src/ExportingAndUsingPackages/UsingPackages/: CMakeLists.txt
src/GTest/: CMakeLists.txt  README.md
src/GTest/src/: CMakeLists.txt
src/GTest/test/: CMakeLists.txt  test_vector.cpp
src/MPI/: CMakeLists.txt  hello_mpi.cpp
src/OpenCV/: CMakeLists.txt  README.md  main.cpp
src/Subdirectories/: CMakeLists.txt  README.md
src/Subdirectories/complex/include/: complex.h
src/Subdirectories/complex/src/: complex.cpp
src/Subdirectories/vector/include/: vector.h
src/Subdirectories/vector/src/: vector.cpp
src/exporting-and-using-packages/: README.md
src/exporting-and-using-packages/exporting-packages/: CMakeLists.txt  main.cpp
src/exporting-and-using-packages/exporting-packages/complex/include/: complex.h
src/exporting-and-using-packages/using-packages/: CMakeLists.txt  main.cpp
src/gtest/src/: vector.cpp  vector.h
src/gtest/test/: test_vector.cpp
src/mpi/: hello_mpi.cpp
src/opencv/: README.md
src/subdirectories/complex/: CMakeLists.txt
tests/: check_format.sh  test_compile.sh
